[gd_scene load_steps=11 format=2]

[ext_resource path="res://Juego/Ships/Player/player_blue.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://Juego/UI/HUD/ContenedorInformacion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/UI/HUD/ContenedorInformacionEnergia.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeCanvas/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FadeCanvas/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "mostrar"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "mostrarSuavizado"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "ocultar"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "ocultarSuavizado"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="FadeCanvas" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="FadeCanvas"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="FadeCanvas/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.5
margin_top = -113.5
margin_right = 148.5
margin_bottom = 113.5
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )
anims/fadeIn = SubResource( 2 )

[node name="InfoZonaRecarga" parent="." groups=[
"contenedorInfo",
] instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 395.0
margin_bottom = 95.0

[node name="Label" parent="InfoZonaRecarga" index="1"]
margin_bottom = 38.5
text = "Zona de recarga de energia"

[node name="InfoMeteoritos" parent="." groups=[
"contenedorInfo",
] instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = -95.0
margin_right = 395.0
margin_bottom = 0.0
autoOcultar = true

[node name="Label" parent="InfoMeteoritos" index="1"]
margin_top = -37.5
margin_bottom = 37.5
text = "Meteoritos Restantes: xx"

[node name="InfoTiempoRestante" parent="." groups=[
"contenedorInfo",
] instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -395.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 95.0
autoOcultar = true

[node name="Label" parent="InfoTiempoRestante" index="1"]
text = "Tiempo Restante: mm:ss"

[node name="InfoEnergiaLaser" parent="." groups=[
"contenedorInfo",
] instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -395.0
margin_top = -95.0
margin_right = 0.0
margin_bottom = 0.0
autoOcultar = true

[node name="InfoEnergiaEscudo" parent="." groups=[
"contenedorInfo",
] instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -395.0
margin_top = -192.184
margin_right = 0.0
margin_bottom = -97.1841
autoOcultar = true

[node name="AnimationPlayer" parent="InfoEnergiaEscudo" index="0"]
autoplay = "ocultar"
anims/mostrar = SubResource( 3 )
anims/mostrarSuavizado = SubResource( 4 )
anims/ocultar = SubResource( 5 )
anims/ocultarSuavizado = SubResource( 6 )

[node name="Label" parent="InfoEnergiaEscudo" index="1"]
margin_left = -132.5
margin_right = 132.5
text = "Energia Escudo"

[node name="ProgressBar" parent="InfoEnergiaEscudo" index="3"]
value = 100.0

[editable path="InfoZonaRecarga"]

[editable path="InfoMeteoritos"]

[editable path="InfoTiempoRestante"]

[editable path="InfoEnergiaEscudo"]
